2005-04-10  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompCmds.c:
	* generic/tclCompile.c:
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclProc.c:
	* generic/tclVar.c: part 2 of variable reform. Removed the flags
	VAR_SCALAR and VAR_UNDEFINED.


	* generic/tclExecute.c: missing semicolons under TCL_COMPILE_DEBUG
	* generic/tclInt.h: missing macros TclAllocObjsStorage and
	TclFreeObjStorage, not needed under MEM_DEBUG for Tcl_Objs but
	required for the new Var allocation model.	
	Thanks dgp!
	
	*** FROM HEAD ***
	* generic/tclBasic.c (TclObjInvoke):	Plug memory leak. [Bug 1180368]

	* generic/tcl.h (comments):
	* generic/tclCmdIL.c:
	* generic/tclCompile.c:
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclNamesp.c:
	* generic/tclProc.c:
	* generic/tclVar.c: First part of variable reform. Change Var
	struct so that sizeof(Var)==sizeof(Tcl_Obj), and use the special
	obj allocator for vars. The Var struct has been reduced from
	(2ints+6ptrs) to (2ints+4ptrs).

	*** COMPAT: breaks both binary and (trivially) source compat for
	extensions that access the Var struct
	
	* generic/tclCompile.c (optimiser):
	* generic/tclExecute.c: storing pointers to literals instead of
	offsets into the literal table for INST_PUSH. This is currently
	implemented using NASTY CASTS (ptr->TclPSizedInt->ptr) [not used
	when VM_USE_PACKED]
	*** REQUIRES CLEANING: use a union for opnd, instead of casting.
	
2005-04-09  Miguel Sofer <msofer@users.sf.net>

	* generic/tclInt.h: change of order in macros

	*** FROM HEAD ***
	* generic/tclListObj.c (Tcl_ListObjIndex): added missing NULL return
	when getting index from an empty list.
	* generic/tclExecute.c: fix possible leak of expansion Tcl_Objs
	

2005-04-04  Miguel Sofer <msofer@users.sf.net>

	*** FROM HEAD ***
	* generic/tclExecute.c: small opts in obj handling

2005-04-02  Miguel Sofer <msofer@users.sf.net>

	*** FROM HEAD ***
	* generic/tclVar.c: converted a few function calls to macros.	
	
	* generic/tclInt.h: